syntax = "proto3";

package tunnel_service;
option go_package = "cs3219-project-ay2223s1-g33/proto";

message TunnelServiceRequest {
  bytes data = 1;
  string username = 2;
  int32 flags = 3;
}

message TunnelServiceResponse {
  bytes data = 1;
}

service TunnelService {
  rpc OpenStream(stream TunnelServiceRequest) returns (stream TunnelServiceResponse);
}
